fix: adjusted footer padding/margin to fix unwanted text wrapping

--- a/src/sections/footer/footer.scss
+++ b/src/sections/footer/footer.scss
@@ -1,7 +1,7 @@
 @import "../../styles/global.scss";
 
 .footer {
-  margin-top: 100px;
+  margin: 100px 0 30px;
   text-align: center;
   hr {
     border: none;
@@ -10,7 +10,7 @@
     width: 70%;
   }
   .row {
-    padding: 30px $horizontal-padding;
+    padding: 30px 10px;
     display: flex;
     justify-content: center;
     align-items: center;
